--- a/client-api/src/main/resources/application.properties
+++ b/client-api/src/main/resources/application.properties
@@ -1,17 +1,13 @@
-server.port=8090
+server.port=8050
 server.error.include-message=always
 server.error.include-binding-errors=always
 
+
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
-spring.application.name=post-core-api
-eureka.client.service-url.defaultZone=http://localhost:8020/eureka
 
-server.servlet.contextPath=/
-spring.cloud.discovery.enabled = true
-eureka.client.fetchRegistry = true
-eureka.client.registerWithEureka = true
-eureka.instance.preferIpAddress = true
+spring.application.name=client-api
+eureka.client.service-url.defaultZone=http://localhost:8020/eureka
 
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/DAR
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -20,3 +16,4 @@ spring.datasource.password=1
 spring.jpa.hibernate.ddl-auto=${CONFIG_JPA_DDL:update}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
