--- a/post-gateway-api/src/main/resources/application.properties
+++ b/post-gateway-api/src/main/resources/application.properties
@@ -1,14 +1,22 @@
 server.port=8082
 
 spring.application.name=post-gateway-api
-eureka.client.service-url.defaultZone=http://localhost:8010/eureka
+eureka.client.service-url.defaultZone=http://localhost:8020/eureka
 
 spring.cloud.gateway.discovery.locator.enabled = true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 
-spring.cloud.gateway.routes[0].id = employee-status-check
+spring.cloud.gateway.routes[0].id = post-core-api
 spring.cloud.gateway.routes[0].uri = lb://post-core-api
 spring.cloud.gateway.routes[0].predicates[0]=Path=/post-core-api/post/healthcheck
 spring.cloud.gateway.routes[0].predicates[1]=Method=GET
 spring.cloud.gateway.routes[0].filters[0] =RemoveRequestHeader=Cookie
+
+
+spring.cloud.gateway.routes[1].id = client-api
+spring.cloud.gateway.routes[1].uri = lb://client-api
+spring.cloud.gateway.routes[1].predicates[0]=Path=/client-api/client/healthcheck
+spring.cloud.gateway.routes[1].predicates[1]=Method=GET
+spring.cloud.gateway.routes[1].filters[0] =RemoveRequestHeader=Cookie
+
