--- a/post-gateway-api/src/main/resources/application.properties
+++ b/post-gateway-api/src/main/resources/application.properties
@@ -20,3 +20,8 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=/client-api/client/healthcheck
 spring.cloud.gateway.routes[1].predicates[1]=Method=GET
 spring.cloud.gateway.routes[1].filters[0] =RemoveRequestHeader=Cookie
 
+spring.cloud.gateway.routes[2].id = service-api
+spring.cloud.gateway.routes[2].uri = lb://service-api
+spring.cloud.gateway.routes[2].predicates[0]=Path=/service-api/client/healthcheck
+spring.cloud.gateway.routes[2].predicates[1]=Method=GET
+spring.cloud.gateway.routes[2].filters[0] =RemoveRequestHeader=Cookie
