--- a/post-gateway-api/src/main/resources/application.properties
+++ b/post-gateway-api/src/main/resources/application.properties
@@ -22,6 +22,21 @@ spring.cloud.gateway.routes[1].filters[0] =RemoveRequestHeader=Cookie
 
 spring.cloud.gateway.routes[2].id = service-api
 spring.cloud.gateway.routes[2].uri = lb://service-api
-spring.cloud.gateway.routes[2].predicates[0]=Path=/service-api/client/healthcheck
+spring.cloud.gateway.routes[2].predicates[0]=Path=/service-api/service/healthcheck
 spring.cloud.gateway.routes[2].predicates[1]=Method=GET
 spring.cloud.gateway.routes[2].filters[0] =RemoveRequestHeader=Cookie
+
+
+spring.cloud.gateway.routes[3].id = mail-core-api
+spring.cloud.gateway.routes[3].uri = lb://mail-core-api
+spring.cloud.gateway.routes[3].predicates[0]=Path=/mail-core-api/mail/healthcheck
+spring.cloud.gateway.routes[3].predicates[1]=Method=GET
+spring.cloud.gateway.routes[3].filters[0] =RemoveRequestHeader=Cookie
+
+
+
+spring.cloud.gateway.routes[4].id = employee-api
+spring.cloud.gateway.routes[4].uri = lb://employee-api
+spring.cloud.gateway.routes[4].predicates[0]=Path=/employee-api/employee/healthcheck
+spring.cloud.gateway.routes[4].predicates[1]=Method=GET
+spring.cloud.gateway.routes[4].filters[0] =RemoveRequestHeader=Cookie
